# gtclang-all

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: External_Boost.cmake  External_Clang.cmake  External_Dawn.cmake  External_GTClang.cmake  External_Protobuf.cmake  GTClangAddOptionalDeps.cmake  GTClangAllClone.cmake  GTClangAllCloneRepository.cmake  GTClangAllDefinitions.cmake  GTClangAllFindPackage.cmake  GTClangAllGitInit.cmake  GTClangAllMakeCMakeScript.cmake  GTClangAllMakePackageInfo.cmake  GTClangAllOptions.cmake  GTClangAllSetDownloadDir.cmake  GTclangAllOptions.cmake
cmake/templates/: protobuf_python_install_script.sh.in
scripts/git/: git_fetch_submodules.sh  git_update_submodules.sh
